# tonic-tls

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
docs/: Cert-rotation.md  Development.md  Incoming-trait.md  Transport-trait.md
docs/background/: OpenSSL-cert-callbacks.md
grpc-tests/: Cargo.toml  build.rs
grpc-tests/src/: lib.rs
tonic-ntls/: Cargo.toml  README.md
tonic-ntls/src/: client.rs  lib.rs
tonic-rustls/: Cargo.toml
tonic-rustls/src/: client.rs  lib.rs
tonic-tls/: Cargo.toml
tonic-tls-tests/: Cargo.toml  build.rs
tonic-tls-tests/examples/: client.rs  server.rs
tonic-tls-tests/src/: cert_rotation_tests.rs  duplex_tests.rs  ktls_tests.rs  lib.rs  ntls_tests.rs  openssl_gen.rs  openssl_tests.rs  rustls_tests.rs  schannel_tests.rs
tonic-tls/src/: client.rs  endpoint.rs  lib.rs  server.rs
tonic-tls/src/native/: client.rs  mod.rs  server.rs  stream.rs
tonic-tls/src/openssl/: client.rs  mod.rs  server.rs  stream.rs
tonic-tls/src/openssl_ktls/: client.rs  mod.rs  server.rs  stream.rs
tonic-tls/src/rustls/: client.rs  mod.rs  server.rs  stream.rs
tonic-tls/src/schannel/: client.rs  mod.rs  server.rs  stream.rs
