[workspace]
resolver = "2"
members = [
 "tonic-tls", "tonic-tls-tests"
]

[workspace.dependencies]
tonic-tls = { path = "tonic-tls" }

tokio = "1"
tokio-rustls = { version = "0.26", default-features = false }
async-stream = "0.3"
futures = { version = "0.3", default-features = false }
tonic = "0.12"
tower = "0.5"
hyper = "1.5"
hyper-util = "0.1"
tracing = "0.1"

# native tls
tokio-native-tls = "0.3"

# openssl
tokio-openssl = "0.6"
openssl = "0.10"

# for dev only
rcgen = {version = "0.13", default-features = true }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["net"] }
prost = "0.13"
rustls = { version = "0.23", default-features = false , features = ["std"]}