[workspace]
resolver = "2"
members = [
 "tonic-tls", "tonic-tls-tests"
]

[workspace.dependencies]
tonic-tls = { path = "tonic-tls" , default-features = false, features = ["openssl-ktls", "native", "rustls", "openssl", "schannel"] }

tokio = "1"
tokio-rustls = { version = "0.26", default-features = false }
async-stream = "0.3"
futures = { version = "0.3", default-features = false }
tonic = "0.14"
tower = "0.5"
hyper = "1"
hyper-util = "0.1"
tracing = "0.1"
socket2 = "0.6"

# native tls
tokio-native-tls = "0.3"

# openssl
tokio-openssl = "0.6"
openssl = "0.10"

# schannel
tokio-schannel = "0.2"
schannel = "0.1"

# ktls
openssl-ktls = { version = "0.2", default-features = false, features = ["tokio"] }

# for dev only
rcgen = {version = "0.14", default-features = true }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["net"] }
prost = "0.14"
rustls = { version = "0.23", default-features = false , features = ["std"]}
native-tls = { version = "0.2", features = ["alpn"] }
tonic-prost-build = "0.14"
tonic-prost = "0.14"
