[package]
name = "grpc-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Crate is disabled on Windows via `#![cfg(not(windows))]` in lib.rs. The
# heavy gRPC-rust deps are also gated below so cargo doesn't even resolve
# (and compile) protoc-gen-rust-grpc's cmake-based build script on Windows.
# Server side uses tonic + prost (the grpc-rust crate has no public server
# API in 0.9.x; the official quickstart pairs a tonic server with a grpc
# client).
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }

# Client side uses the grpc-rust crate. Not available on Windows.
[target.'cfg(not(windows))'.dependencies]
grpc.workspace = true
grpc-protobuf.workspace = true
protobuf.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

# grpc-protobuf-build's default `build-plugin` feature transitively pulls
# in protoc-gen-rust-grpc, whose build script invokes cmake to compile
# protoc + the plugin from C++ source. That cmake step fails on the
# Windows CI runner, so we restrict the build-dep to non-Windows targets.
# To bypass the C++ compile on platforms where it is enabled, set the
# environment variable PROTOC_GEN_RUST_GRPC_NO_BUILD=1 and provide
# protoc-gen-rust-grpc on PATH (or via GRPC_RUST_PROTOC_DIR).
[target.'cfg(not(windows))'.build-dependencies]
grpc-protobuf-build.workspace = true

[package.metadata.rust-analyzer]
cargo.loadOutDirsFromCheck = true
