[package]
name = "tonic-tls-tests"
version = "0.1.0"
edition = "2024"
publish = false

[[example]]
name = "helloworld-server"
path = "examples/server.rs"

[[example]]
name = "helloworld-client"
path = "examples/client.rs"

[dependencies]
# openssl gen
openssl.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["signal"]}
rustls = {workspace =  true, features = ["std", "ring"]}
tokio-rustls.workspace = true
rcgen.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
tonic-tls = { workspace = true }
futures.workspace = true
tokio-native-tls.workspace = true
native-tls.workspace = true
tokio-schannel.workspace = true
schannel.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

# For protobuf rs code
[package.metadata.rust-analyzer]
cargo.loadOutDirsFromCheck = true