[package]
name = "tonic-tls"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
async-stream.workspace = true
tracing.workspace = true
futures.workspace = true

tower.workspace = true
tonic.workspace = true
hyper.workspace = true
hyper-util.workspace = true

# native tls
tokio-native-tls = { workspace = true, optional = true }

# rustls
tokio-rustls = { workspace = true, optional = true }

[features]
default = []
native = ["dep:tokio-native-tls"]
rustls = ["dep:tokio-rustls"]