[package]
name = "tonic-tls"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["youyuanwu@outlook.com"]
repository = "https://github.com/youyuanwu/tonic-tls"
documentation = "https://github.com/youyuanwu/tonic-tls"
description = "Tls wrappers for tonic."
categories = ["web-programming", "network-programming"]
keywords = ["gRPC", "tls", "rustls", "native-tls"]
readme = "../README.md"

[dependencies]
tokio.workspace = true
async-stream.workspace = true
tracing.workspace = true
futures.workspace = true

tower.workspace = true
tonic.workspace = true
hyper.workspace = true
hyper-util.workspace = true

# native tls
tokio-native-tls = { workspace = true, optional = true }

# rustls
tokio-rustls = { workspace = true, optional = true }

# openssl
tokio-openssl = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }

[features]
default = []
native = ["dep:tokio-native-tls"]
rustls = ["dep:tokio-rustls"]
openssl = ["dep:tokio-openssl", "dep:openssl"]